--- a/Xb.Db/Xb.Db.csproj
+++ b/Xb.Db/Xb.Db.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Xb\Db\DbBase.cs" />
+    <Compile Include="Xb\Db\ResultRow.cs" />
+    <Compile Include="Xb\Db\ResultTable.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
