--- a/Xb.Db/Xb.Db.csproj
+++ b/Xb.Db/Xb.Db.csproj
@@ -40,7 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xb\Db\Column.cs" />
     <Compile Include="Xb\Db\DbBase.cs" />
+    <Compile Include="Xb\Db\Error.cs" />
+    <Compile Include="Xb\Db\Model.cs" />
     <Compile Include="Xb\Db\MsSql.cs" />
     <Compile Include="Xb\Db\ResultRow.cs" />
     <Compile Include="Xb\Db\ResultTable.cs" />
