プロジェクト名にビルドターゲットサフィックスを追加。

--- a/TestXb/TestXb.csproj
+++ b/TestXb/TestXb.csproj
@@ -82,9 +82,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Xb.Db\Xb.Db.csproj">
+    <ProjectReference Include="..\Xb.Db\Xb.Db.STD1.3.csproj">
       <Project>{e934d179-93cc-4890-86f6-2827d2d5cd61}</Project>
-      <Name>Xb.Db</Name>
+      <Name>Xb.Db.STD1.3</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
