--- a/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
+++ b/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
@@ -82,9 +82,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Xb.Db.STD1.3\Xb.Db.STD1.3.csproj">
+    <ProjectReference Include="..\..\Xb.Db\Xb.Db.STD1.3\Xb.Db.STD1.3.csproj">
       <Project>{e934d179-93cc-4890-86f6-2827d2d5cd61}</Project>
       <Name>Xb.Db.STD1.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Xb.Db.MsSql.STD1.3\Xb.Db.MsSql.STD1.3.csproj">
+      <Project>{8c03b514-baa0-4b37-a5c9-9d2bee891aca}</Project>
+      <Name>Xb.Db.MsSql.STD1.3</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
