--- a/Xb.Db.MsSql/Xb.Db.MsSql.STD1.3/Xb.Db.MsSql.STD1.3.csproj
+++ b/Xb.Db.MsSql/Xb.Db.MsSql.STD1.3/Xb.Db.MsSql.STD1.3.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E934D179-93CC-4890-86F6-2827D2D5CD61}</ProjectGuid>
+    <ProjectGuid>{8C03B514-BAA0-4B37-A5C9-9D2BEE891ACA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Xb</RootNamespace>
-    <AssemblyName>Xb.Db</AssemblyName>
+    <AssemblyName>Xb.Db.MsSql</AssemblyName>
     <DefaultLanguage>ja-JP</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -40,15 +40,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Xb\Db\Model.Column.cs" />
-    <Compile Include="Xb\Db\DbBase.cs" />
-    <Compile Include="Xb\Db\Model.Error.cs" />
-    <Compile Include="Xb\Db\Model.cs" />
     <Compile Include="Xb\Db\MsSql.cs" />
-    <Compile Include="Xb\Db\ResultRow.cs" />
-    <Compile Include="Xb\Db\ResultTable.cs" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Xb.Db\Xb.Db.STD1.3\Xb.Db.STD1.3.csproj">
+      <Project>{e934d179-93cc-4890-86f6-2827d2d5cd61}</Project>
+      <Name>Xb.Db.STD1.3</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
