Model.ColumnでなくModelがEncodingを保持するよう修正。 Dispose時に配下オブジェクトを一緒に破棄するように。

--- a/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
+++ b/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Xb\Db\MsSqlBase.cs" />
     <Compile Include="Xb\Db\MsSqlColumnTests.cs" />
     <Compile Include="Xb\Db\MsSqlModelTests.cs" />
-    <Compile Include="Xb\Db\MsSqlTest.cs" />
+    <Compile Include="Xb\Db\MsSqlTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="MsSqlTest.orderedtest">
