MySqlの参照ライブラリを、Oracle公式からMySqlConnectorへ変更。

--- a/Xb.Db.MySql/Xb.Db.MySql.CR1.0/project.json
+++ b/Xb.Db.MySql/Xb.Db.MySql.CR1.0/project.json
@@ -9,7 +9,8 @@
       "type": "platform",
       "version": "1.0.1"
     },
-    "MySql.Data": "7.0.6-IR31"},
+    "MySqlConnector": "0.*"
+  },
 
   "frameworks": {
     "netcoreapp1.0": {
