--- a/Xb.Db.MySql/TestXb.Db.MySql/packages.config
+++ b/Xb.Db.MySql/TestXb.Db.MySql/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
+  <package id="MySqlConnector" version="0.9.1" targetFramework="net46" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="net46" />
   <package id="System.Data.Common" version="4.1.0" targetFramework="net451" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.0.0" targetFramework="net46" />
   <package id="Xb.Core" version="1.0.5" targetFramework="net451" />
 </packages>
