--- a/Xb.Db.MySql/Xb.Db.MySql.AND1.0/packages.config
+++ b/Xb.Db.MySql/Xb.Db.MySql.AND1.0/packages.config
@@ -1,5 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MySqlConnector" version="0.9.1" targetFramework="monoandroid70" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid70" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="monoandroid70" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Console" version="4.0.0" targetFramework="monoandroid70" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="monoandroid403" />
+  <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="monoandroid70" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="monoandroid70" />
+  <package id="System.Globalization.Extensions" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.IO" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Linq" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Net.NameResolution" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="monoandroid70" />
+  <package id="System.Net.Security" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="monoandroid70" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Security.Principal" version="4.0.1" targetFramework="monoandroid70" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="monoandroid70" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="System.Threading.Tasks.Extensions" version="4.0.0" targetFramework="monoandroid70" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="monoandroid70" />
   <package id="Xb.Core" version="1.0.5" targetFramework="monoandroid403" />
 </packages>
