--- a/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
+++ b/Xb.Db.MsSql/TestXb.Db.MsSql/TestXb.Db.MsSql.csproj
@@ -48,8 +48,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml" />
-    <Reference Include="Xb.Core, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xb.Core.1.0.5\lib\net45\Xb.Core.dll</HintPath>
+    <Reference Include="Xb.Core, Version=1.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xb.Core.1.0.6\lib\net45\Xb.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
